<resources>
    <string name="app_name">HToolBox</string>
    <string name="functions_are_under_development">功能开发中~</string>
    <string name="common_content_title">一些内容</string>
    <string name="permission_manual_request_text">请前往系统设置手动开启权限</string>
    <string name="android_version_not_support_text">Android版本不支持</string>
    <string name="common_not_content">没有检索到数据</string>
    <string name="common_tips_title_tv">常见问题</string>
    <string name="color_r_text">R</string>
    <string name="color_g_text">G</string>
    <string name="color_b_text">B</string>
    <string name="color_a_text">A</string>
    <string name="tool_box_item_chronograph_text">计时器</string>
    <string name="tool_box_item_random_name_text">随机点名</string>
    <string name="tool_box_item_chat_room_text">聊天室</string>
    <string name="tool_box_item_signature_canvas_text">画板</string>
    <string name="tool_box_item_turn_table_text">转盘</string>
    <string name="tool_box_item_ffmpeg_text">音视频编辑</string>
    <string name="tool_box_item_push_box_text">推箱子</string>
    <string name="tool_box_item_ftp_text">FTP文件传输</string>
    <string name="tool_box_item_device_msg_text">设备参数信息</string>
    <string name="tool_box_item_local_file_text">内部存储设备</string>
    <string name="tool_box_item_torrent_parse_text">种子解析</string>
    <string name="common_builtin_tips">长按可添加到个人列表</string>
    <string name="common_builtin_title_tv">内置数据列表</string>
    <string name="common_builtin_select_tips_tv">是否直接使用该列表?</string>
    <string name="common_builtin_expand_all_tv">折叠所有列表</string>
    <string name="random_title_text">点名</string>
    <string name="random_none_text">未开始点名</string>
    <string name="random_start_error_tips">当前已经点完了,可以重置已点名单,重复操作</string>
    <string name="random_start_not_data_tips">名单没有内容,换一个名单试试吧</string>
    <string name="random_main_enum_count_text">已被点%d次</string>
    <string name="random_main_default_count_text">(0):</string>
    <string name="random_stop_text">暂停点名</string>
    <string name="random_start_text">开始点名</string>
    <string name="random_name_main_swipe_tips">当前分组列表</string>
    <string name="random_main_not_select_recycler">待点名单</string>
    <string name="random_main_is_select_recycler">已点名单</string>
    <string name="random_main_reset_select_recycler_text">重置已点名单</string>
    <string name="manage_group_page_title_text">管理分组</string>
    <string name="manage_group_page_none_group_tips_text">您还没有创建分组</string>
    <string name="manage_group_page_new_group_text">添加分组</string>
    <string name="manage_delete_tips_text">是否删除:%s?</string>
    <string name="manage_group_with_name_page_none_group_tips_text">该分组还没有数据</string>
    <string name="manage_group_with_name_page_new_group_text">添加数据</string>
    <string name="new_group_create_tips_text">新建分组</string>
    <string name="new_group_cancel_text">取消</string>
    <string name="new_group_create_text">创建</string>
    <string name="new_group_edit_no_space_tips_text">不支持输入空格哦~</string>
    <string name="new_group_edit_max_tips_text">最多输入10位哦~</string>
    <string name="new_group_edit_none_tips_text">请输入分组名称哦~</string>
    <string name="new_group_edit_exist_tips_text">该分组已经存在~</string>
    <string name="new_name_with_group_create_tips_text">新增名称</string>
    <string name="new_name_with_group_cancel_text">取消</string>
    <string name="new_name_with_group_create_text">创建</string>
    <string name="new_name_with_group_edit_max_tips_text">最多输入5位哦~</string>
    <string name="new_name_with_group_edit_none_tips_text">请输入名称哦~</string>
    <string name="new_name_with_group_edit_exist_tips_text">该名称已经存在~</string>
    <string name="new_name_with_group_edit_success_tips_text">创建成功！</string>
    <string name="new_name_with_group_edit_error_tips_text">创建失败！</string>
    <string name="select_group_to_main_title_text">请选择分组</string>
    <string name="select_group_to_main_tips_text">长按以选择该分组,单击查看分组明细~</string>
    <string name="random_setting_text">点名设置</string>
    <string name="random_setting_sleep_text">速度设置</string>
    <string name="random_setting_select_data_text">选择随机分组</string>
    <string name="random_setting_manager_data_text">管理所有分组</string>
    <string name="random_setting_builtin_data_text">内置分组数据</string>
    <string name="random_setting_vibrator_text">按钮震动</string>
    <string name="random_setting_eggs_text">彩蛋功能</string>
    <string name="random_setting_repeat_text">是否启用重复点名</string>
    <string name="random_setting_enum_text">是否启用统计</string>
    <string name="random_setting_not_select_text">未点到与点到名单展示</string>
    <string name="random_setting_result_text_size_text">结果文本字号</string>
    <string name="random_setting_current_result_text_size_text">当前字体大小为</string>
    <string name="random_setting_result_text_size_tips_text">设置的文本大小与手机分辨率有关系</string>
    <string name="random_setting_result_text_bold_text">结果文本加粗</string>
    <string name="random_setting_speed_one_text">最低速度</string>
    <string name="random_setting_speed_two_text">中等速度</string>
    <string name="random_setting_speed_three_text">最高速度</string>
    <string name="random_setting_random_type_text">点名类型</string>
    <string name="random_setting_random_type_now_text">立即点名</string>
    <string name="random_setting_random_type_auto_text">自动点名</string>
    <string name="random_setting_random_type_manual_text">手动点名</string>
    <string name="random_setting_select_random_type_auto_tips_text">选择自动点名后,间隔时间会根据当前速度自动做出调整</string>
    <string name="random_setting_select_random_type_now_tips_text">选择立即点名后,速度设置将会失效</string>
    <string name="random_setting_select_random_type_manual_tips_text">手动点名为常规模式~</string>
    <string name="random_setting_random_db_sort_text">列表排序类型</string>
    <string name="random_setting_random_db_sort_tips_text">设置后排序方式会作用于所有列表</string>
    <string name="random_setting_random_db_sort_by_time_asc_text">按时间升序</string>
    <string name="random_setting_random_db_sort_by_time_desc_text">按时间降序</string>
    <string name="random_setting_random_db_sort_by_name_asc_text">按名称升序</string>
    <string name="random_setting_random_db_sort_by_name_desc_text">按名称降序</string>
    <string name="random_setting_random_delete_all_data_text">删除所有的数据</string>
    <string name="common_dialog_sure_text">确定</string>
    <string name="common_dialog_cancel_text">取消</string>
    <string name="common_tips_delete_success">删除成功</string>
    <string name="common_dialog_edit_data_title">请填写文件名称</string>
    <string name="common_dialog_edit_data_hint">文件名称</string>
    <string name="common_dialog_edit_data_tips">文件名称不能为空</string>
    <string name="chronograph_tool_bar_title">计时器</string>
    <string name="voice_record_down_tips">按住 录音</string>
    <string name="voice_record_up_tips">松开 保存</string>
    <string name="voice_record_up_cancel_tips">松开 取消</string>
    <string name="chat_room_send_button_text">发送</string>
    <string name="chat_room_welcome_text">你们已经成为好友~</string>
    <string name="chat_room_default_one_content_text">很高兴能和你见面,嘻嘻~</string>
    <string name="chat_room_just_text">刚刚</string>
    <string name="signature_canvas_title">画板</string>
    <string name="signature_canvas_pen_tv">画笔</string>
    <string name="signature_canvas_eraser_tv">橡皮</string>
    <string name="signature_canvas_clear_tv">清空</string>
    <string name="signature_canvas_save_tv">保存</string>
    <string name="signature_canvas_clear_tips">是否确定清空内容</string>
    <string name="signature_canvas_setting_text">画板设置</string>
    <string name="signature_canvas_setting_pen_color_text">画笔颜色</string>
    <string name="canvas_setting_color_a_text">A</string>
    <string name="canvas_setting_color_r_text">R</string>
    <string name="canvas_setting_color_g_text">G</string>
    <string name="canvas_setting_color_b_text">B</string>
    <string name="signature_canvas_setting_pen_width_text">画笔宽度</string>
    <string name="signature_canvas_setting_current_pen_width_text">当前设置宽度为</string>
    <string name="signature_canvas_setting_eraser_width_text">橡皮大小</string>
    <string name="signature_canvas_setting_current_eraser_width_text">当前设置大小为</string>
    <string name="signature_canvas_setting_pen_width_error">画笔不能设置小于等于零</string>
    <string name="signature_canvas_setting_eraser_width_error">橡皮不能设置小于等于零</string>
    <string name="signature_canvas_setting_manager_file_text">已保存文件管理</string>
    <string name="signature_canvas_setting_save_file_success">文件保存成功</string>
    <string name="signature_canvas_setting_save_file_error">文件保存失败</string>
    <string name="turn_table_title">转盘</string>
    <string name="turn_table_title_manager_data_tv">我的转盘数据管理</string>
    <string name="turn_table_title_setting_tv">转盘设置</string>
    <string name="turn_table_title_setting_select_data">内置转盘数据</string>
    <string name="turn_table_title_setting_enable_sound">是否启用转盘音效</string>
    <string name="turn_table_title_setting_enable_touch">是否启用转盘触摸</string>
    <string name="turn_table_title_setting_color">转盘配色</string>
    <string name="turn_table_title_setting_delete_all">删除所有转盘数据</string>
    <string name="turn_table_title_setting_anim_interpolator">转盘动画分类</string>
    <string name="turn_table_title_data_manager_not_data_tv">您还没有转盘数据</string>
    <string name="turn_table_title_data_manager_add_tv">添加转盘数据</string>
    <string name="turn_table_title_new_data_tv">编辑转盘数据</string>
    <string name="turn_table_new_data_title_tv">转盘标题</string>
    <string name="turn_table_new_data_title_hint_tv">请输入转盘标题</string>
    <string name="turn_table_new_data_name_tv">转盘选项</string>
    <string name="turn_table_new_data_name_hint_tv">请输入转盘选项</string>
    <string name="turn_table_new_add_data_tv">添加转盘选项</string>
    <string name="turn_table_new_save_data_tv">保存选项</string>
    <string name="turn_table_edit_data_error_tips_one_tv">--- 最少保留两条转盘选项 ---</string>
    <string name="turn_table_edit_data_error_tips_two_tv">--- 目前最多支持十条转盘选项 ---</string>
    <string name="turn_table_edit_data_error_tips_three_tv">--- 还有未输入的转盘内容 ---</string>
    <string name="turn_table_edit_data_error_tips_four_tv">--- 不能输入空格 ---</string>
    <string name="turn_table_edit_data_error_tips_five_tv">是否保存本次修改?</string>
    <string name="turn_table_edit_data_save_success_tv">保存成功</string>
    <string name="turn_table_setting_delete_all_tv">是否删除所有转盘数据?</string>
    <string name="turn_table_recycler_item_menu_delete_tv">删除</string>
    <string name="turn_table_recycler_item_menu_edit_tv">编辑数据</string>
    <string name="turn_table_recycler_item_menu_tips">侧滑可编辑列表</string>
    <string name="ffmpeg_item_convert_text">转换</string>
    <string name="ffmpeg_main_item_one">mp4转mp3</string>
    <string name="ffmpeg_main_item_two">m3u8转mp4</string>
    <string name="ffmpeg_main_item_three">h265(h264)转mp4</string>
    <string name="ffmpeg_main_item_four">合并多个mp4</string>
    <string name="ffmpeg_main_item_five">mp4转gif</string>
    <string name="ffmpeg_mp4_to_mp3_click_tv">选择mp4文件</string>
    <string name="ffmpeg_mp4_to_mp3_not_file_tips_tv">没有已选择的mp4文件</string>
    <string name="ffmpeg_mp4_to_mp3_handle_click_tv">开始转换</string>
    <string name="ffmpeg_mp4_to_mp3_file_path_tips">mp4文件路径:</string>
    <string name="ffmpeg_mp4_to_mp3_to_end_path_tips">转换后的mp3路径:</string>
    <string name="ffmpeg_mp4_to_gif_click_tv">选择mp4文件</string>
    <string name="ffmpeg_mp4_to_gif_not_file_tips_tv">没有已选择的mp4文件</string>
    <string name="ffmpeg_mp4_to_gif_handle_click_tv">开始转换</string>
    <string name="ffmpeg_mp4_to_gif_file_path_tips">mp4文件路径:</string>
    <string name="ffmpeg_mp4_to_gif_to_end_path_tips">转换后的gif路径:</string>
    <string name="ffmpeg_mp4_to_gif_clip_title_tv">裁剪区间(滑动选择)</string>
    <string name="ffmpeg_mp4_to_gif_clip_start_tv">开始时间:</string>
    <string name="ffmpeg_mp4_to_gif_clip_end_tv">结束时间:</string>
    <string name="ffmpeg_mp4_to_gif_clip_range_tips">裁剪区间:</string>
    <string name="ffmpeg_merge_mp4_handle_click_tv">开始合并</string>
    <string name="ftp_main_config_text">配置信息</string>
</resources>