<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_table_new_data_title_tv"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/item_turn_table_edit_data_name_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/bg_new_group_edit"
            android:hint="@string/turn_table_new_data_title_hint_tv"
            android:maxLength="15"
            android:paddingStart="@dimen/dp_12"
            android:singleLine="true"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/turn_table_new_data_name_tv"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>