<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ftp.ui.activity.FtpServerConfigActivity">

        <RelativeLayout
            android:id="@+id/ftp_server_config_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_radius_18_gray_top_half"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/ftp_server_config_control_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ftp_server_config_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/common_dialog_cancel_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ftp_main_config_text"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ftp_server_config_sure_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:text="@string/common_dialog_sure_text"
                    android:textColor="@color/green_75"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ftp_server_config_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ftp_server_config_control_layout"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20" />
        </RelativeLayout>
    </RelativeLayout>
</layout>